# SurveyPlatform

./: .gitignore  README.md  Survey PlatfotmAPI.yaml  db.json  docker-compose.yml  manage.py  pyproject.toml
SurveyPlatform/: asgi.py  settings.py  urls.py  wsgi.py
survey/: admin.py  models.py  serializers.py  urls.py  views.py
survey/migrations/: 0001_initial.py
templates/: auth.html
user/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
